--- a/Login.html
+++ b/Login.html
@@ -42,7 +42,7 @@
       </div>
       <div class="box-root padding-top--24 flex-flex flex-direction--column" style="flex-grow: 1; z-index: 9;">
         <div class="box-root padding-top--48 padding-bottom--24 flex-flex flex-justifyContent--center">
-          <h1><a href="http://blog.stackfindover.com/" rel="dofollow">e-Office Management System</a></h1>
+          <h1>e-Office Management System</h1>
         </div>
         <div class="formbg-outer">
           <div class="formbg">
